0.0.0

* Symbol previews: removed echelon from all but UNIT and SO.
* Performance: Externalized symbol image/url cache to file (FRIENDLY/PRESENT only).