@@ -1,6 +1,7 @@
 import * as R from 'ramda'
 import React from 'react'
 import PropTypes from 'prop-types'
+import isEqual from 'react-fast-compare'
 import { initialState, multiselect, singleselect } from './list-state'
 
 
@@ -69,8 +70,9 @@ export const useList = (options = {}) => {
 export const useStack = initial => {
   const reducer = (entries, event) => {
     switch (event.type) {
-      // might change entries unnecessarily (accepted for now)
-      case 'reset': return [event.entry]
+      case 'reset': return isEqual(entries, [event.entry])
+        ? entries
+        : [event.entry]
       case 'push': return [...entries, event.entry]
       case 'pop': return event.key
         ? R.dropLastWhile(entry => entry.key !== event.key, entries)
@@ -79,4 +81,26 @@ export const useStack = initial => {
   }
 
   return React.useReducer(reducer, initial)
+}
+
+
+export const useMemento = (key, defaultValue) => {
+  const { preferencesStore: store } = useServices()
+  const [value, setValue] = React.useState(null)
+
+  const put = React.useCallback(newValue => {
+    if (isEqual(value, newValue)) return
+    store.put(key, newValue)
+  }, [store, value, key])
+
+  /* eslint-disable react-hooks/exhaustive-deps */
+  React.useEffect(() => {
+    (async () => setValue(await store.get(key, defaultValue)))()
+    const handler = value => setValue(value)
+    store.on(key, handler)
+    return () => store.off(key, handler)
+  }, [])
+  /* eslint-enable react-hooks/exhaustive-deps */
+
+  return { value, put }
 }
